--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Wild Nest</string>
     <string name="title_activity_camera_screen">CameraScreen</string>
+    <string name="title_activity_home_screen">HomeScreen</string>
 </resources>
